# cu-embed

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  flake.nix
examples/: add_scalar.rs
src/: build_support.rs  lib.rs  manifest.rs  runtime.rs
src/kernels/: add_scalar.cu
